overflow fix

--- a/projects/site2019/src/assets/scss/_footer.scss
+++ b/projects/site2019/src/assets/scss/_footer.scss
@@ -89,6 +89,7 @@
   &-mailing {
     margin: auto;
     margin-right: 0;
+    max-width: 100%;
 
     &-container {
       display: flex;
